--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.pyc
+*.pyd
+*.pyo
+
 # C extensions
 *.so
 
